test_yuriiq/catalog/language/russian/account/login.php
<?php

// text
$_['text_register_account']	= 'Создание учетной записи поможет делать следующие покупки быстрее (не надо будет снова вводить адрес и контактную информацию), видеть состояние заказа, а также видеть заказы, сделанные ранее. Вы также сможете накапливать при покупках призовые баллы (на них тоже можно что-то купить), а постоянным покупателям мы предлагаем систему скидок.';
$_['text_account']	= 'Личный Кабинет';
$_['text_i_am_returning_customer']	= 'Войти в Личный Кабинет:';
$_['text_login']	= 'Логин';
$_['text_returning_customer']	= 'Зарегистрированный покупатель';
$_['text_forgotten']	= 'Забыли пароль?';
$_['text_new_customer']	= 'Новый покупатель';
$_['text_register']	= 'Регистрация';

// error
$_['error_approved']	= 'Вы сможете войти после проверки учётной записи администрацией магазина.';
$_['error_login']	= 'Неправильно заполнены поля E-Mail и/или пароль!';

// entry
$_['entry_password']	= 'Пароль:';
$_['entry_email']	= 'E-Mail:';

// heading
$_['heading_title']	= 'Логин';
?>